117-AKS-NGINX-MultipleIngressControllers-001/201-K8s-Deployments/211-K8s-App-Internal-001/4-app-ingress.yaml
###################################################################################################################
# The deployment of the nginx ingress for HTTP
###################################################################################################################

kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: app2-ingress-http
  namespace: app2
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTP

spec:
  ingressClassName: internal-nginx
  rules:
    - host: app2.domain.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 80               
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app2-service
                port:
                  number: 443
